[package]
name = "wasixcc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasixcc"
required-features = ["tracing-subscriber"]

[dependencies]
anyhow = "1.0.98"
regex = "1.11.1"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true, features = [
    "env-filter",
] }

[features]
bin = ["tracing-subscriber"]
tracing-subscriber = ["dep:tracing-subscriber"]
